[tool.poetry]
name = "intelligence-pipeline"
version = "0.1.0"
description = ""
authors = ["Tyler Fisher <tylerfisher@tylerfisher.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cvss = "^3.1"
dagster = "^1.7.14"
dagster-webserver = "^1.7.14"
requests = "^2.32.3"
polars = "^1.2.1"
inflection = "^0.5.1"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "intelligence_pipeline"

